Actually, let's use these super genious key combos instead

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,6 +1,9 @@
 set surround
+
 nmap <Space> :action SearchEverywhere<CR>
 nmap <-> :action CommentByLineComment<CR>
 nmap <C--> :action CommentByBlockComment<CR>
-:nnoremap K i<CR><Esc>
+
+nnoremap J muo<ESC>`u
+nnoremap K muO<ESC>`u
 
